# omp_average

./: .gitignore  CMakeLists.txt  Dockerfile  run.sh
.docker/: image_name
.podman/: image_name
src/: main.cpp
